fix horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -227,7 +227,8 @@ html, body {
 }
 body {
   font-family: Montserrat,sans-serif;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.5;
